# moderation-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  locustfile.py  pyproject.toml
colab/: eval_int8.ipynb  eval_onnx.ipynb
docs/: baseline_accuracy.md  baseline_predictions.parquet  benchmarks.md  bias_evaluation.md  bias_predictions.parquet  int4_nf4_accuracy.md  int4_nf4_predictions.parquet  int8_accuracy.md  int8_predictions.parquet  locust_summary.md  onnx_accuracy.md  onnx_predictions.parquet  sanity_check_output.txt
moderation_engine/: _logging.py  api.py  batcher.py  config.py  model.py
moderation_engine/backends/: __init__.py  onnx.py  pytorch.py
scripts/: download_civil_comments.py  download_jigsaw.py  ec2_userdata.sh  eval_baseline.py  eval_bias.py  export_onnx.py  parity_check.py  quantize_int4.py  quantize_onnx.py  render_batching_chart.py  render_bias_writeup.py  run_locust_sweep.sh  run_threading_sweep.sh  run_window_sweep.sh  sanity_check.py  summarize_locust.py  summarize_window_sweep.py
tests/: conftest.py  test_batcher.py  test_smoke.py
