[project]
name = "moderation-engine"
version = "0.1.0"
description = "Low-latency content moderation service for real-time chat"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
authors = [{ name = "Adit Patel" }]
dependencies = [
    "datasets>=2.18",
    "fastapi>=0.110",
    "httpx>=0.27",
    "onnxruntime>=1.17",
    "optimum[exporters,onnxruntime]>=1.20",
    "pandas>=2.2",
    "prometheus-client>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "scikit-learn>=1.4",
    "structlog>=24.1",
    "torch>=2.2",
    "transformers>=4.40",
    "uvicorn[standard]>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moderation_engine"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line-too-long (formatter handles it)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts ok in tests

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    "kaggle>=2.1.2",
    "locust>=2.44.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
