[project]
name = "moderation-engine"
version = "0.1.0"
description = "Low-latency content moderation service for real-time chat"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
authors = [{ name = "Adit Patel" }]
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "onnxruntime>=1.17",
    "prometheus-client>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "transformers>=4.40",
    "uvicorn[standard]>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moderation_engine"]

[tool.ruff]
target-version = "py311"
line-length = 100
# Colab notebooks follow per-cell conventions (top-level imports inside the
# cell that uses them, semicolon-chained config setup); don't lint them.
extend-exclude = ["colab/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line-too-long (formatter handles it)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts ok in tests

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    # Eval, parity-check, and export tooling: needed locally and on Colab
    # but not by the deployed service.
    "datasets>=2.18",
    "optimum[exporters,onnxruntime]>=1.20",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "torch>=2.2",
    # Load-test + data-pipeline + hygiene tooling.
    "kaggle>=2.1.2",
    "locust>=2.44.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

# PyTorch CPU-only wheels on Linux (used for container builds). Mac dev resolves
# torch from the default PyPI index, which ships the MPS-enabled arm64 wheel.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
